# allura

./: .asf.yaml  .babelrc  .env  .eslintignore-es5  .eslintignore-es6  .eslintrc  .eslintrc-es5  .eslintrc-es6  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jscsrc  .jshintrc  .pre-commit-config.yaml  .travis.yml  Brocfile.js  CHANGES  CLAUDE.md  CONTRIBUTING  DISCLAIMER  Dockerfile  Guardfile  INSTALL-docker.markdown  INSTALL.markdown  INSTALLING.EC2  LICENSE  Makefile  Makefile.def.buildbot  NOTICE  README.markdown  RUNNING  __init__.py  app.py  build_virtualenv.py  conftest.py  coverage-report-all.sh  deploy.time  docker-compose-prod.yml  docker-compose.yml  (+29 more)
Allura/: LICENSE  MANIFEST.in  NOTICE  README.txt  celeryconfig.py  demo.ini  development.ini  docker-dev.ini  ldap-setup.py  ldap-userconfig.py  oembed.ini  production-docker-example.ini  push_re.py  pyproject.toml  sandbox-test.ini  sandbox.ini  setup.cfg  setup.py  test-light.py  test.ini
Allura/allura/: __init__.py  app.py  eventslistener.py  factory.py  migrations.py  pastetemplate.py  task.py  version.py  views.py  webhooks.py
Allura/allura/command/: __init__.py  base.py  cli.py  create_neighborhood.py  create_trove_categories.py  reactor.py  reclone_repo.py  rethumb.py  rssfeeds.py  script.py  set_neighborhood_features.py  set_neighborhood_level.py  set_neighborhood_private.py  setup_app.py  show_models.py  smtp_server.py  taskd.py  taskd_cleanup.py
Allura/allura/config/: app_cfg.py  deployment.ini  environment.py  middleware.py  resources.py
Allura/allura/controllers/: __init__.py  attachments.py  auth.py  base.py  basetest_neighborhood_root.py  basetest_project_root.py  controller.template  discuss.py  error.py  feed.py  newforge.py  oembed.py  project.py  repository.py  rest.py  root.py  search.py  secure.py  site_admin.py  static.py  task.py  template.py  test.py  test_neighborhood_root.py  test_project_root.py  trovecategories.py
Allura/allura/etc/: mime.types
Allura/allura/lib/: AsciiDammit.py  __init__.py  app_globals.py  async.py  base.py  custom_middleware.py  decorators.py  diff.py  dispatch.py  exceptions.py  gravatar.py  helpers.py  htmltruncate.py  import_api.py  macro.py  mail_util.py  markdown_extensions.py  multifactor.py  oid_helper.py  ordereddict.py  package_path_loader.py  patches.py  patience.py  plugin.py  project_create_helpers.py  repository.py  rest_api.py  sanitize_placeholder_poc.py  search.py  security.py  solr.py  stats.py  utils.py  validators.py  zarkov_helpers.py
Allura/allura/model/: __init__.py  artifact.py  attachments.py  auth.py  contrib_stats.py  discuss.py  filesystem.py  import_batch.py  index.py  monq_model.py  multifactor.py  neighborhood.py  notification.py  oauth.py  openid_model.py  project.py  repo.py  repo_refresh.py  repository.py  session.py  stats.py  tag.py  timeline.py  types.py  webhook.py
Allura/allura/scripts/: __init__.py  backfill_previous_login_details.py  clear_old_notifications.py  create_deleted_comments.py  create_oauth1_dummy_tokens.py  create_sitemap_files.py  delete_projects.py  disable_users.py  md_perf.py  refresh_last_commits.py  refreshrepo.py  reindex_projects.py  reindex_users.py  remove_duplicate_troves.py  scripttask.py  set_default_user_notifications.py  test.py  trac_export.py  trim_emails.py  update_checkout_url.py
Allura/allura/tasks/: activity_tasks.py  admin_tasks.py  event_tasks.py  export_tasks.py  index_tasks.py  mail_tasks.py  notification_tasks.py  repo_tasks.py  tracker_task.py
Allura/allura/templates/: __init__.py  app_admin_delete.html  app_admin_edit_label.html  app_admin_options.html  app_admin_options_on_install.html  app_admin_permissions.html  app_admin_webhooks_list.html  award.html  award_not_found.html  awards.html  bare_openid.html  browse_trove_categories.html  claim_openid.html  create_account.html  custom_login.html  error.html  footer.html  forgotten_password.html  grant.html  grants.html  index.html  lib.html  login.html  login_email_sent.html  login_email_verify_error.html  login_fragment.html  login_multifactor.html  logout.html  markdown_syntax.html  markdown_syntax_dialog.html  master.html  master_one_col.html  members.html  neighborhood.html  neighborhood_add_project.html  neighborhood_admin_accolades.html  neighborhood_admin_overview.html  neighborhood_admin_permissions.html  neighborhood_help.html  neighborhood_lib.html  (+65 more)
Allura/allura/templates_responsive/: __init__.py  responsive_overrides.py
Allura/allura/tests/: __init__.py  decorators.py  exclude_from_rewrite_hook.py  genshi_hello_tmpl  helpers.py  test_app.py  test_commands.py  test_decorators.py  test_delete_projects.py  test_diff.py  test_dispatch.py  test_globals.py  test_helpers.py  test_mail_util.py  test_markdown.py  test_middleware.py  test_middlewares.py  test_multifactor.py  test_patches.py  test_patience.py  test_plugin.py  test_scripts.py  test_scripttask.py  test_search.py  test_security.py  test_tags.py  test_tasks.py  test_utils.py  test_validators.py  test_webhooks.py  test_zarkov_helpers.py  tscript.py  tscript_args.py  tscript_error.py
Allura/allura/websetup/: __init__.py  bootstrap.py  schema.py
Allura/docs/: Makefile  administration.rst  conf.py  contributing.rst  extending.rst  faq.rst  index.rst  install.rst  installation.rst  intro.rst  mac_install.rst  migration.rst  online.rst  platform.rst  platform_tour.rst  scm_host.rst  scm_host_ssh.rst  tools.rst  using.rst
Allura/docs/_templates/: layout.html
Allura/docs/api-rest/: allura-api.json  (+6 more)
Allura/ez_setup/: __init__.py
Allura/flyway/: command.py  migrate.py  model.py
Allura/tg/: __init__.py  controllers.py  decorators.py  error.py  render.py  shim.py  tg_globals.py  traversal.py  util.py  view.py
ForgeActivity/: pyproject.toml  setup.cfg  setup.py  test.ini
ForgeActivity/forgeactivity/: __init__.py  main.py
ForgeTracker/: LICENSE  NOTICE  pyproject.toml  sandbox-test.ini  setup.cfg  setup.py  test.ini
ForgeTracker/forgetracker/: import_support.py  main.py  plugins.py  search.py  site_stats.py  tasks.py  tracker_main.py
(+5693 files in other folders)
