#       Licensed to the Apache Software Foundation (ASF) under one
#       or more contributor license agreements.  See the NOTICE file
#       distributed with this work for additional information
#       regarding copyright ownership.  The ASF licenses this file
#       to you under the Apache License, Version 2.0 (the
#       "License"); you may not use this file except in compliance
#       with the License.  You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#       Unless required by applicable law or agreed to in writing,
#       software distributed under the License is distributed on an
#       "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#       KIND, either express or implied.  See the License for the
#       specific language governing permissions and limitations
#       under the License.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ForgeTracker"
dynamic = ["version"]
description = ""
readme = ""
authors = [
    {name = "Allura Team"}
]
license = {text = "Apache License, http://www.apache.org/licenses/LICENSE-2.0"}
keywords = ["allura", "forge"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "Allura"
]

[tool.setuptools.package-data]
"*" = ["*"]

[project.entry-points.allura]
Tickets = "forgetracker.tracker_main:ForgeTrackerApp"

[project.entry-points."allura.site_stats"]
tickets_24hr = "forgetracker.site_stats:tickets_stats_24hr"

[project.entry-points."easy_widgets.resources"]
ew_resources = "forgetracker.config.resources:register_ew_resources"

[project.entry-points."paste.paster_command"]
fix-discussion = "forgetracker.command.fix_discussion:FixDiscussion"
